# mcu-mdt

./: .gitignore  LICENSE  Makefile  README.md  mcu_mdt.py  pyproject.toml
container/: Dockerfile
docs/: architecture.md  arhitecture.md  commands.md  how-to-build.md  protocol.md  testing.md  troubleshooting.md
docs/avr/: info.md
docs/stm32/: info.md
examples/avr/: Makefile  main.c
examples/demos/: atmega328p_demo.c  stm32f0_demo.c  stm32f1_demo.c
examples/stm32/: Makefile  main.c
hal/: mcu_mdt_hal.h
hal/avr/: Makefile  commands.c  commands.h  hal_avr.c  hal_avr.h  uart.c  uart.h
hal/stm32/: Makefile  hal_stm.c  linker.ld  uart.c  uart.h
inc/: mcu_mdt.h  mcu_mdt_config.h  mcu_mdt_hal.h  ring_buffer.h
pc_tool/: commander.py  event.py  loader.py  logger.py  main.py  parser.py  validator.py
pc_tool/atdf/: AT90PWM1.atdf  AT90PWM161.atdf  AT90PWM3B.atdf  AT90USB1287.atdf  AT90USB646.atdf  AT90USB647.atdf  ATmega128.atdf  ATmega1280.atdf  ATmega1281.atdf  ATmega1284.atdf  ATmega1284P.atdf  ATmega1284RFR2.atdf  ATmega128A.atdf  ATmega16.atdf  ATmega162.atdf  ATmega164A.atdf  ATmega164P.atdf  ATmega164PA.atdf  ATmega165P.atdf  ATmega168A.atdf  ATmega168PB.atdf  ATmega169A.atdf  ATmega169P.atdf  ATmega169PA.atdf  ATmega16A.atdf  ATmega16HVBrevB.atdf  ATmega2560.atdf  ATmega2561.atdf  ATmega2564RFR2.atdf  ATmega256RFR2.atdf  ATmega324P.atdf  ATmega324PA.atdf  ATmega3250P.atdf  ATmega3250PA.atdf  ATmega325A.atdf  ATmega325P.atdf  ATmega325PA.atdf  ATmega328PB.atdf  ATmega329.atdf  ATmega3290.atdf  (+24 more)
pc_tool/common/: dataclasses.py  elf_symbols.py  enums.py  logger.py  protocol.py  terminal.py  uart_io.py
pc_tool/configs/: commands.yaml
scripts/: Dockerfile  docker-compose.yaml  install.sh
src/: mcu_mdt.c  mcu_mdt_breakpoints.c  mcu_mdt_breakpoints.h  mcu_mdt_event.c  mcu_mdt_event.h  mcu_mdt_private.h  mcu_mdt_protocol.c  mcu_mdt_protocol.h  mcu_mdt_watchpoint.c  mcu_mdt_watchpoint.h  ring_buffer.c  ring_buffer.h
test/: conftest.py  pymdtest.py
test/common/: asserts.py  mdtfixtures.py
test/hardware/: test_hardware.py
test/integration/: test_dispatch.py  test_pipeline.py
test/simulators/: stm32f030.resc  stm32f103.resc
test/unit/: test_crc.py  (+3 more)
(+90 files in other folders)
