[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcu-mdt"
version = "0.0.1"
description = "Debugger for embedded microcontrollers"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mihai-Bogdan Stoica" }]
license = { text = "MIT" }
dependencies = ["pyserial", "pyyaml"]

[project.scripts]
mcu-mdt = "pc_tool.main:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
include = ["pc_tool*"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-v"
markers = ["hw: hardware tests (require MCU + UART)"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "C90", "N", "B", "I", "Q000", "S"]
ignore = ["E501"]
exclude = ["build/", "dist/", ".venv/"]

[tool.ruff.lint.isort]
known-first-party = ["pc_tool"]

[tool.ruff.format]
quote-style = "double"